cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: sonarqube
    meta.helm.sh/release-namespace: sonarqube
  creationTimestamp: "2024-05-11T15:53:40Z"
  generation: 1
  labels:
    app: sonarqube
    app.kubernetes.io/managed-by: Helm
    chart: sonarqube-10.5.1_2816
    heritage: Helm
    release: sonarqube
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
  name: sonarqube-sonarqube
  namespace: sonarqube
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #     - sonarqube.siri.com
  #   secretName: letsencrypt-issuer-prod
  rules:
  - host: sonarqube.siri.com
    http:
      paths:
      - backend:
          service:
            name: sonarqube-sonarqube
            port:
              number: 9000
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: a3a8aada99db342c1acabed73343e1cc-1531309508.us-west-2.elb.amazonaws.com
